--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# vim temporary files
+*.sw*
+*~
 # Logs
 logs
 *.log
@@ -22,4 +25,8 @@ build/Release
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
-node_modules
+node_modules/
+bower_components/
+
+# compiled files
+dist
